// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/channel/ChannelList should match snapshot 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.channel_settings.channel_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description"
    >
      <FormattedMessage
        defaultMessage="Team"
        id="admin.channel_settings.channel_list.teamHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description"
    >
      <FormattedMessage
        defaultMessage="Management"
        id="admin.channel_settings.channel_list.managementHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-actions"
    />
  </div>
  <div
    className="groups-list--body"
  >
    <ChannelRow
      channel={
        Object {
          "display_name": "DN",
          "id": "123",
        }
      }
      key="123"
      onRowClick={[Function]}
    />
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.team_channel_settings.list.paginatorCount"
        values={
          Object {
            "endCount": 1,
            "startCount": 1,
            "total": 1,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={null}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={null}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelList should match snapshot with paging 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.channel_settings.channel_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description"
    >
      <FormattedMessage
        defaultMessage="Team"
        id="admin.channel_settings.channel_list.teamHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description"
    >
      <FormattedMessage
        defaultMessage="Management"
        id="admin.channel_settings.channel_list.managementHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-actions"
    />
  </div>
  <div
    className="groups-list--body"
  >
    <ChannelRow
      channel={
        Object {
          "display_name": "DN0",
          "id": "id0",
        }
      }
      key="id0"
      onRowClick={[Function]}
    />
    <ChannelRow
      channel={
        Object {
          "display_name": "DN1",
          "id": "id1",
        }
      }
      key="id1"
      onRowClick={[Function]}
    />
    <ChannelRow
      channel={
        Object {
          "display_name": "DN2",
          "id": "id2",
        }
      }
      key="id2"
      onRowClick={[Function]}
    />
    <ChannelRow
      channel={
        Object {
          "display_name": "DN3",
          "id": "id3",
        }
      }
      key="id3"
      onRowClick={[Function]}
    />
    <ChannelRow
      channel={
        Object {
          "display_name": "DN4",
          "id": "id4",
        }
      }
      key="id4"
      onRowClick={[Function]}
    />
    <ChannelRow
      channel={
        Object {
          "display_name": "DN5",
          "id": "id5",
        }
      }
      key="id5"
      onRowClick={[Function]}
    />
    <ChannelRow
      channel={
        Object {
          "display_name": "DN6",
          "id": "id6",
        }
      }
      key="id6"
      onRowClick={[Function]}
    />
    <ChannelRow
      channel={
        Object {
          "display_name": "DN7",
          "id": "id7",
        }
      }
      key="id7"
      onRowClick={[Function]}
    />
    <ChannelRow
      channel={
        Object {
          "display_name": "DN8",
          "id": "id8",
        }
      }
      key="id8"
      onRowClick={[Function]}
    />
    <ChannelRow
      channel={
        Object {
          "display_name": "DN9",
          "id": "id9",
        }
      }
      key="id9"
      onRowClick={[Function]}
    />
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.team_channel_settings.list.paginatorCount"
        values={
          Object {
            "endCount": 10,
            "startCount": 1,
            "total": 30,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={null}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next "
      disabled={false}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;
